--- a/app/src/main/res/layout/main_login.xml
+++ b/app/src/main/res/layout/main_login.xml
@@ -145,18 +145,18 @@
             android:layout_gravity="center"
             android:id="@+id/logo_up"
             android:src="@mipmap/ic_launcher_foreground"
-            android:layout_above="@id/craftsGramTextView"
+            android:layout_above="@id/emptyProjectTextView"
             android:layout_centerHorizontal="true"
             />
 
         <TextView
-            android:id="@+id/craftsGramTextView"
+            android:id="@+id/emptyProjectTextView"
             android:layout_centerHorizontal="true"
             android:layout_above="@id/intoAppContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:text="CraftsGram"
+            android:text="emptyProject"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="16sp"
