--- a/app/src/main/res/layout/main_login.xml
+++ b/app/src/main/res/layout/main_login.xml
@@ -25,6 +25,46 @@
         android:textColor="@android:color/white"
         app:fontFamily="sans-serif-light" />
 
+    <LinearLayout
+        android:visibility="visible"
+        android:background="@drawable/round_corner_white_filled"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvLogin"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
+        <LinearLayout
+            android:id="@+id/languageLinearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/spacing_large"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/languageTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="English"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+                android:textColor="@color/main_theme_primary_dark" />
+
+            <View
+                android:layout_width="@dimen/spacing_large"
+                android:layout_height="0dp" />
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
+                app:tint="@color/main_theme_primary_dark" />
+
+
+        </LinearLayout>
+    </LinearLayout>
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
