--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -24,6 +24,7 @@
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/appbarlayout"
             android:layout_alignParentTop="true"
             android:visibility="gone"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -57,7 +58,6 @@
             >
 
             <FrameLayout
-                android:visibility="gone"
                 android:id="@+id/waitingFrameLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -92,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
-                android:text="emptyProject"
+                android:text="@string/app_name"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:textSize="16sp"
