--- a/app/src/main/res/layout/phone_verification.xml
+++ b/app/src/main/res/layout/phone_verification.xml
@@ -130,8 +130,33 @@
         app:layout_constraintStart_toStartOf="@id/guideline4"
         app:layout_constraintTop_toBottomOf="@id/fillInformTextView" />
 
+
     <LinearLayout
         android:id="@+id/verificationCodeContainer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="@id/guideline8"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="@id/guideline7"
+        app:layout_constraintTop_toBottomOf="@id/divider"
+        android:orientation="vertical">
+        <EditText
+            android:paddingHorizontal="@dimen/default_4dp"
+            android:id="@+id/principalEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:background="@color/grey_5"
+            android:gravity="center"
+            android:inputType="phone"
+            android:hint="000000"
+            android:textColorHint="@color/grey_5"
+            android:maxLength="6" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/verificationCodeContainer2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
