--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -122,4 +122,149 @@
     <color name="orange_white">#EFE2C8</color>
     <color name="orange_white_transparent">#A1EFE202</color>
 
+
+
+
+
+    <color name="md_theme_primary">#9A4600</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#FF9755</color>
+    <color name="md_theme_onPrimaryContainer">#431A00</color>
+    <color name="md_theme_secondary">#705d00</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#ffd92f</color>
+    <color name="md_theme_onSecondaryContainer">#514300</color>
+    <color name="md_theme_tertiary">#835336</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#FFC8AA</color>
+    <color name="md_theme_onTertiaryContainer">#5E341A</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#410002</color>
+    <color name="md_theme_background">#FFF8F5</color>
+    <color name="md_theme_onBackground">#231914</color>
+    <color name="md_theme_surface">#FFF8F5</color>
+    <color name="md_theme_onSurface">#231914</color>
+    <color name="md_theme_surfaceVariant">#FADDCE</color>
+    <color name="md_theme_onSurfaceVariant">#564338</color>
+    <color name="md_theme_outline">#897266</color>
+    <color name="md_theme_outlineVariant">#DDC1B3</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#3A2E28</color>
+    <color name="md_theme_inverseOnSurface">#FFEDE5</color>
+    <color name="md_theme_inversePrimary">#FFB68C</color>
+    <color name="md_theme_primaryFixed">#FFDBC9</color>
+    <color name="md_theme_onPrimaryFixed">#321200</color>
+    <color name="md_theme_primaryFixedDim">#FFB68C</color>
+    <color name="md_theme_onPrimaryFixedVariant">#753400</color>
+    <color name="md_theme_secondaryFixed">#FFDADA</color>
+    <color name="md_theme_onSecondaryFixed">#40000C</color>
+    <color name="md_theme_secondaryFixedDim">#FFB3B6</color>
+    <color name="md_theme_onSecondaryFixedVariant">#920027</color>
+    <color name="md_theme_tertiaryFixed">#FFDBC9</color>
+    <color name="md_theme_onTertiaryFixed">#321200</color>
+    <color name="md_theme_tertiaryFixedDim">#F8B995</color>
+    <color name="md_theme_onTertiaryFixedVariant">#673C21</color>
+    <color name="md_theme_surfaceDim">#EAD6CD</color>
+    <color name="md_theme_surfaceBright">#FFF8F5</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#FFF1EB</color>
+    <color name="md_theme_surfaceContainer">#FEEAE0</color>
+    <color name="md_theme_surfaceContainerHigh">#F8E4DB</color>
+    <color name="md_theme_surfaceContainerHighest">#F2DFD5</color>
+    <color name="md_theme_primary_mediumContrast">#6F3100</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#BB5809</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#8A0025</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#DC1D46</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#63381D</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#9C694A</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#8C0009</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#DA342E</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#FFF8F5</color>
+    <color name="md_theme_onBackground_mediumContrast">#231914</color>
+    <color name="md_theme_surface_mediumContrast">#FFF8F5</color>
+    <color name="md_theme_onSurface_mediumContrast">#231914</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#FADDCE</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#523F34</color>
+    <color name="md_theme_outline_mediumContrast">#705B4F</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#8D766A</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#3A2E28</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#FFEDE5</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#FFB68C</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#BB5809</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#964400</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#E12249</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#BA0035</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#9C694A</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#805134</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#EAD6CD</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#FFF8F5</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#FFF1EB</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#FEEAE0</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#F8E4DB</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#F2DFD5</color>
+    <color name="md_theme_primary_highContrast">#3D1700</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#6F3100</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#4D0010</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#8A0025</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#3B1802</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#63381D</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#4E0002</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#8C0009</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#FFF8F5</color>
+    <color name="md_theme_onBackground_highContrast">#231914</color>
+    <color name="md_theme_surface_highContrast">#FFF8F5</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#FADDCE</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#302017</color>
+    <color name="md_theme_outline_highContrast">#523F34</color>
+    <color name="md_theme_outlineVariant_highContrast">#523F34</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#3A2E28</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#FFE7DC</color>
+    <color name="md_theme_primaryFixed_highContrast">#6F3100</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#4D2000</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#8A0025</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#610017</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#63381D</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#482309</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#EAD6CD</color>
+    <color name="md_theme_surfaceBright_highContrast">#FFF8F5</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#FFF1EB</color>
+    <color name="md_theme_surfaceContainer_highContrast">#FEEAE0</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#F8E4DB</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#F2DFD5</color>
 </resources>
