--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,5 @@
 <resources>
 
-
     //user profile
 
 
@@ -9,29 +8,40 @@
     <!--general spacing-->
     <dimen name="spacing_small">3dp</dimen>
     <dimen name="spacing_medium">5dp</dimen>
-    <dimen name="spacing_middle">10dp</dimen>
-    <dimen name="spacing_large">15dp</dimen>
+    <dimen name="spacing_xmedium">8dp</dimen>
+    <dimen name="spacing_middle">12dp</dimen>
+    <dimen name="spacing_large">16dp</dimen>
     <dimen name="spacing_smlarge">18dp</dimen>
     <dimen name="spacing_mlarge">20dp</dimen>
+    <dimen name="spacing_mxlarge">28dp</dimen>
     <dimen name="spacing_xlarge">35dp</dimen>
     <dimen name="spacing_xmlarge">40dp</dimen>
+    <dimen name="spacing_xxlarge">50dp</dimen>
+    <dimen name="spacing_xxxlarge">55dp</dimen>
+    <dimen name="spacing_xxxllarge">60dp</dimen>
+    <dimen name="spacing_xxxxllarge">80dp</dimen>
 
     <!-- Material Vision -->
 
     <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
 
     <dimen name="activity_horizontal_margin2">8dp</dimen>
     <dimen name="activity_horizontal_margin3">32dp</dimen>
 
     <dimen name="backdrop_height1">132dp</dimen>
-    <dimen name="spacing_xxlarge">50dp</dimen>
+    <dimen name="activity_horizontal_margin4">96dp</dimen>
+    <!--    <dimen name="main_circle_size">220dp</dimen>-->
     <dimen name="main_square_size">180dp</dimen>
     <dimen name="main_circle_size">220dp</dimen>
 
+    <dimen name="launcher_icon_size">80dp</dimen>
+    <dimen name="main_loading_view_size">64dp</dimen>
 
     <!--
 Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+
     -->
 </resources>
